--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,7 +14,8 @@ security:
             stateless: true
             provider: app_user_provider
             custom_authenticators:
-                - App\Security\ApiTokenAuthenticator     
+                - App\Security\ApiTokenAuthenticator
+            entry_point: App\Security\ApiAuthenticationEntryPoint       
 
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -22,10 +23,10 @@ security:
 
         main:
             lazy: true
-            stateless: true
             provider: app_user_provider
             custom_authenticators:
                 - App\Security\ApiTokenAuthenticator
+            entry_point: App\Security\ApiAuthenticationEntryPoint    
 
     access_control:
         # Public API
@@ -37,8 +38,7 @@ security:
         - { path: ^/api/, roles: IS_AUTHENTICATED_FULLY }
 
         # Pages HTML protégées
-        - { path: ^/app/, roles: ROLE_USER }
-        - { path: ^/battle, roles: ROLE_USER }
+        - { path: ^/app/, roles: [ROLE_EMPLOYEE] }
     
 
 when@test:
