--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,6 +27,10 @@ security:
             custom_authenticators:
                 - App\Security\ApiTokenAuthenticator
             entry_point: App\Security\ApiAuthenticationEntryPoint    
+            
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_USER]
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     access_control:
         # Public API
@@ -39,6 +43,7 @@ security:
 
         # Pages HTML protégées
         - { path: ^/app/, roles: [ROLE_USER] }
+        - { path: ^/admin/, roles: [ROLE_ADMIN] }
     
 
 when@test:
